[package]
name = "wakerpool"
version = "0.1.0"
authors = ["Chad Austin <chad@chadaustin.me>"]
edition = "2021"
rust-version = "1.60"
license = "MIT"
description = "lightweight object pool for lists of Wakers"
repository = "https://github.com/chadaustin/wakerpool"
keywords = ["async"]
categories = ["asynchronous"]

[dependencies]

[dev-dependencies]
rand = "0.8"
static_assertions = "1.1"
